# spark

./: BUILD.bazel  WORKSPACE  macros.bzl
assembly/: BUILD.bazel
bazel_wrappers/: submit.sh
common/kvstore/: BUILD.bazel
common/network-common/: BUILD.bazel
common/network-shuffle/: BUILD.bazel
common/sketch/: BUILD.bazel
common/tags/: BUILD.bazel
common/unsafe/: BUILD.bazel
core/: BUILD.bazel
examples/: BUILD.bazel
graphx/: BUILD.bazel
launcher/: BUILD.bazel
mllib/: BUILD.bazel
mllib-local/: BUILD.bazel
repl/: BUILD.bazel
resource-managers/kubernetes/core/: BUILD
sql/catalyst/: BUILD.bazel
sql/core/: BUILD.bazel
sql/hive/: BUILD.bazel
streaming/: BUILD.bazel
tools/: BUILD.bazel
