package(default_visibility = ["//visibility:public"])

scala_binary(
    name = "submit",
    deps = [":core"],
    main_class = "org.apache.spark.deploy.SparkSubmit",
)

scala_library(
    name = "core",
    srcs = glob([
            "src/main/scala/**/*.scala",
            "src/main/scala-2.12/**/*.scala",
            "src/main/java/**/*.java",
        ]),
    main_class = "org.apache.spark.deploy.SparkSubmit",
    javacopts = ["-Xep:GuardedBy:WARN"],
    deps = [
        "//common/kvstore",
        "//common/network-common",
        "//common/network-shuffle",
        "//common/tags",
        "//common/unsafe",
        "//launcher",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:org_apache_zookeeper_zookeeper",
        "@maven//:com_esotericsoftware_kryo_shaded",
        "@maven//:com_clearspring_analytics_stream",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_module_jackson_module_scala_2_12",
        "@maven//:com_github_luben_zstd_jni",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_ning_compress_lzf",
        "@maven//:com_twitter_chill_2_12",
        "@maven//:com_twitter_chill_java",
        "@maven//:commons_codec_commons_codec",
        "@maven//:commons_net_commons_net",
        "@maven//:commons_io_commons_io",
        "@maven//:commons_collections_commons_collections",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:io_dropwizard_metrics_metrics_graphite",
        "@maven//:io_dropwizard_metrics_metrics_jmx",
        "@maven//:io_dropwizard_metrics_metrics_json",
        "@maven//:io_dropwizard_metrics_metrics_jvm",
        "@maven//:io_netty_netty_all",
        "@maven//:javax_activation_activation",
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:log4j_log4j",
        "@maven//:net_razorvine_pyrolite",
        "@maven//:net_sf_py4j_py4j",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_avro_avro_mapred_hadoop2",
        "@maven//:org_apache_commons_commons_crypto",
        "@maven//:org_apache_commons_commons_compress",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_math3",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_apache_curator_apache_curator",
        "@maven//:org_apache_curator_curator_recipes",
        "@maven//:org_apache_curator_curator_client",
        "@maven//:org_apache_curator_curator_framework",
        "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
        "@maven//:org_apache_hadoop_hadoop_hdfs_client",
        "@maven//:org_apache_hadoop_hadoop_yarn_client",
        "@maven//:org_apache_hadoop_hadoop_yarn_api",
        "@maven//:org_apache_hadoop_hadoop_client",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_ivy_ivy",
        "@maven//:org_apache_xbean_xbean_asm7_shaded",
        "@maven//:org_glassfish_jersey_containers_jersey_container_servlet",
        "@maven//:org_glassfish_jersey_containers_jersey_container_servlet_core",
        "@maven//:org_glassfish_jersey_core_jersey_client",
        "@maven//:org_glassfish_jersey_core_jersey_common",
        "@maven//:org_glassfish_jersey_core_jersey_server",
        "@maven//:org_glassfish_jersey_inject_jersey_hk2",
        "@maven//:org_json4s_json4s_jackson_2_12",
        "@maven//:org_json4s_json4s_core_2_12",
        "@maven//:org_json4s_json4s_scalap_2_12",
        "@maven//:org_json4s_json4s_ast_2_12",
        "@maven//:org_lz4_lz4_java",
        "@maven//:org_roaringbitmap_RoaringBitmap",
        "@io_bazel_rules_scala_scala_xml//:io_bazel_rules_scala_scala_xml",
        "@io_bazel_rules_scala_scala_library//:io_bazel_rules_scala_scala_library",
        "@io_bazel_rules_scala_scala_reflect//:io_bazel_rules_scala_scala_reflect",
        "@maven//:org_slf4j_jcl_over_slf4j",
        "@maven//:org_slf4j_jul_to_slf4j",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_log4j12",
        "@maven//:org_spark_project_spark_unused",
        "@maven//:org_xerial_snappy_snappy_java",
        "@maven//:oro_oro",
        "@maven//:org_eclipse_jetty_jetty_client",
        "@maven//:org_eclipse_jetty_jetty_io",
        "@maven//:org_eclipse_jetty_jetty_util",
        "@maven//:org_eclipse_jetty_jetty_servlet",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_eclipse_jetty_jetty_proxy",
        "@maven//:org_fusesource_leveldbjni_leveldbjni_all",
    ],
    runtime_deps = [
        "//core/src/main/resources:resources",
        "@maven//:com_thoughtworks_paranamer_paranamer"
    ],
    resources = glob(["src/main/resources/**"]),
    resource_strip_prefix = "%s/src/main/resources/" % package_name(),
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/network-shuffle:main_dependencies",
        "//common/tags:main_dependencies",
        "//launcher:main_dependencies",
        "@maven//:com_novocode_junit_interface",
        "@maven//:junit_junit",
        "@maven//:net_sourceforge_htmlunit_htmlunit",
        "@maven//:net_sourceforge_htmlunit_htmlunit_core_js",
        "@maven//:org_apache_curator_curator_test",
        "@maven//:org_apache_derby_derby",
        "@maven//:org_apache_hadoop_hadoop_minikdc",
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_apache_httpcomponents_httpcore",
        "@maven//:org_apache_httpcomponents_httpmime",
        "@maven//:org_glassfish_jersey_test_framework_providers_jersey_test_framework_provider_simple",
        "@maven//:org_hamcrest_hamcrest_core",
        "@maven//:org_hamcrest_hamcrest_library",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_scalacheck_scalacheck_2_12",
        "@maven//:org_scalatest_scalatest_2_12",
        "@maven//:org_seleniumhq_selenium_htmlunit_driver",
        "@maven//:org_seleniumhq_selenium_selenium_java",
        "@maven//:xml_apis_xml_apis",
        "main_dependencies"
    ],
    runtime_deps = [
        "//core/src/test/resources:resources",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:log4j_log4j",
        "@maven//:org_apache_avro_avro_mapred_hadoop2",
        "@maven//:org_apache_commons_commons_math3",
        "@maven//:org_apache_curator_curator_recipes",
        "@maven//:org_apache_hadoop_hadoop_client",
        "@maven//:org_apache_zookeeper_zookeeper",
        "@maven//:org_lz4_lz4_java",
        "@io_bazel_rules_scala_scala_library//:io_bazel_rules_scala_scala_library",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_log4j12",
        "@maven//:org_spark_project_spark_unused",
        "@maven//:org_xerial_snappy_snappy_java"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
