package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    deps = [
        "//core:main_dependencies",
        "//external/kafka-0-10-sql:main_dependencies",
        "//external/kafka-0-10:main_dependencies",
        "//graphx:main_dependencies",
        "//mllib:main_dependencies",
        "//sql/hive:main_dependencies",
        "//streaming:main_dependencies",
        "@com_github_scopt_scopt_2_12",
        "@com_twitter_parquet_hadoop_bundle",
        "@org_apache_commons_commons_math3",
        "@org_scala_lang_scala_library",
        "@org_spark_project_spark_unused"
    ],
    runtime_deps = [
        "//examples/src/main/resources:resources"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "@com_novocode_junit_interface",
        "@junit_junit",
        "@org_scalacheck_scalacheck_2_12",
        "@org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "@com_google_guava_guava//:linkable",
        "@com_google_protobuf_protobuf_java//:linkable",
        "@com_twitter_parquet_hadoop_bundle//:linkable",
        "@commons_codec_commons_codec//:linkable",
        "@commons_lang_commons_lang//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro_mapred_hadoop2//:linkable",
        "@org_apache_commons_commons_math3//:linkable",
        "@org_apache_curator_curator_recipes//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_eclipse_jetty_jetty_servlet//:linkable",
        "@org_eclipse_jetty_jetty_util//:linkable",
        "@org_lz4_lz4_java//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_spark_project_spark_unused//:linkable",
        "@org_xerial_snappy_snappy_java//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
