package(default_visibility = ["//visibility:public"])

scala_library(
    name = "graphx",
    srcs = glob([
            "src/main/scala/**/*.scala",
            "src/main/java/**/*.java",
        ]),
    deps = [
        "//common/tags",
        "//core",
        "//mllib-local",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_log4j12",
        "@org_scalanlp_breeze_2_12",
        "@org_scalanlp_breeze_macros_2_12",
        "@com_github_fommil_netlib_core",
        "@com_google_guava_guava",
        "@net_sourceforge_f2j_arpack_combined_all",
        "@org_apache_xbean_xbean_asm7_shaded",
        #"@org_spark_project_spark_unused//:linkable"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "//core:main_dependencies",
        "@com_novocode_junit_interface",
        "@junit_junit",
        "@org_scalacheck_scalacheck_2_12",
        "@org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "//graphx/src/test/resources:resources",
        "@com_google_guava_guava//:linkable",
        "@com_google_protobuf_protobuf_java//:linkable",
        "@commons_codec_commons_codec//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro_mapred_hadoop2//:linkable",
        "@org_apache_commons_commons_math3//:linkable",
        "@org_apache_curator_curator_recipes//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_lz4_lz4_java//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_spark_project_spark_unused//:linkable",
        "@org_xerial_snappy_snappy_java//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
