package(default_visibility = ["//visibility:public"])

scala_library(
    name = "mllib-local",
        srcs = glob([
            "src/main/scala/**/*.scala",
        ]),
    deps = [
        "//common/tags",
        "@org_apache_commons_commons_math3",
        "@org_scalanlp_breeze_2_12",
        "@com_github_fommil_netlib_core",
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "@com_novocode_junit_interface",
        "@junit_junit",
        "@org_mockito_mockito_core",
        "@org_scalacheck_scalacheck_2_12",
        "@org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "@org_apache_commons_commons_math3//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_spark_project_spark_unused//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
