package(default_visibility = ["//visibility:public"])

scala_library(
    name = "mllib",
        srcs = glob([
            "src/main/scala/**/*.scala",
        ]),
    deps = [
        "//common/tags",
        "//common/unsafe",
        "//core",
        "//graphx",
        "//mllib-local",
        "//sql/core",
        "//sql/catalyst",
        "//streaming",
        "@maven//:com_chuusai_shapeless_2_12",
        "@maven//:com_twitter_chill_java",
        "@maven//:com_twitter_chill_2_12",
        "@maven//:com_clearspring_analytics_stream",
        "@maven//:com_github_wendykierp_JTransforms",
        "@maven//:org_jpmml_pmml_model",
        "@org_apache_commons_commons_math3",
        "@maven//:commons_io_commons_io",
        "@maven//:com_google_guava_guava",
        "@maven//:com_esotericsoftware_kryo_shaded",
        "@maven//:org_apache_hadoop_hadoop_hdfs_client",
        "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
        "@maven//:org_apache_hadoop_hadoop_client",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_github_fommil_netlib_all",
        "@maven//:org_glassfish_jaxb_jaxb_runtime",
        "@io_bazel_rules_scala_scala_parser_combinators//:io_bazel_rules_scala_scala_parser_combinators",
        "@io_bazel_rules_scala_scala_xml//:io_bazel_rules_scala_scala_xml",
        "@org_scalanlp_breeze_2_12",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_log4j12",
        "@maven//:org_json4s_json4s_jackson_2_12",
        "@maven//:org_json4s_json4s_core_2_12",
        "@maven//:org_json4s_json4s_scalap_2_12",
        "@maven//:org_json4s_json4s_ast_2_12",
        "@maven//:net_razorvine_pyrolite",
        #"@org_spark_project_spark_unused//:linkable"
    ],
    runtime_deps = [
        "//mllib/src/main/resources:resources"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "//core:main_dependencies",
        "//mllib-local:main_dependencies",
        "//sql/catalyst:main_dependencies",
        "//sql/core:main_dependencies",
        "//streaming:main_dependencies",
        "@com_novocode_junit_interface",
        "@junit_junit",
        "@org_mockito_mockito_core",
        "@org_scalacheck_scalacheck_2_12",
        "@org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "//mllib/src/test/resources:resources",
        "@com_google_guava_guava//:linkable",
        "@com_google_protobuf_protobuf_java//:linkable",
        "@commons_codec_commons_codec//:linkable",
        "@commons_lang_commons_lang//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro_mapred_hadoop2//:linkable",
        "@org_apache_commons_commons_math3//:linkable",
        "@org_apache_curator_curator_recipes//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_lz4_lz4_java//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_spark_project_spark_unused//:linkable",
        "@org_xerial_snappy_snappy_java//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
