package(default_visibility = ["//visibility:public"])

scala_library(
    name = "repl",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    #main_class = "org.apache.spark.repl.Main",
    deps = [
        "//common/tags",
        "//core",
        "//sql/core",
        "//sql/catalyst",
        "@maven//:org_apache_xbean_xbean_asm7_shaded",
        "@maven//:org_apache_hadoop_hadoop_hdfs_client",
        "@maven//:org_apache_hadoop_hadoop_client",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_eclipse_jetty_jetty_http",
        "@maven//:org_eclipse_jetty_jetty_plus",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_eclipse_jetty_jetty_util",
        "@io_bazel_rules_scala_scala_compiler//:io_bazel_rules_scala_scala_compiler",
        "@io_bazel_rules_scala_scala_library//:io_bazel_rules_scala_scala_library",
        "@io_bazel_rules_scala_scala_reflect//:io_bazel_rules_scala_scala_reflect",
        "@maven//:org_slf4j_jul_to_slf4j",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_log4j12",
        #"@org_spark_project_spark_unused//:linkable"
    ],
    #runtime_deps = [
        #"//mllib"
    #],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "//core:main_dependencies",
        "@com_novocode_junit_interface",
        "@junit_junit",
        "@org_mockito_mockito_core",
        "@org_scalacheck_scalacheck_2_12",
        "@org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "//repl/src/test/resources:resources",
        "@com_google_guava_guava//:linkable",
        "@com_google_protobuf_protobuf_java//:linkable",
        "@commons_codec_commons_codec//:linkable",
        "@commons_lang_commons_lang//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro_mapred_hadoop2//:linkable",
        "@org_apache_commons_commons_math3//:linkable",
        "@org_apache_curator_curator_recipes//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_eclipse_jetty_jetty_http//:linkable",
        "@org_eclipse_jetty_jetty_plus//:linkable",
        "@org_eclipse_jetty_jetty_server//:linkable",
        "@org_eclipse_jetty_jetty_util//:linkable",
        "@org_lz4_lz4_java//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_spark_project_spark_unused//:linkable",
        "@org_xerial_snappy_snappy_java//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
