package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    deps = [
        "@org_clapper_classutil_2_12",
        "@org_scala_lang_scala_compiler",
        "@org_scala_lang_scala_reflect",
        "@org_spark_project_spark_unused//:linkable"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "@com_novocode_junit_interface",
        "@junit_junit",
        "@org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "@org_scala_lang_scala_library//:linkable",
        "@org_spark_project_spark_unused//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
