package(default_visibility = ["//visibility:public"])

java_library(
    name = "network-common",
    srcs = glob(["src/main/**/*.java"]),
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:io_netty_netty_all",
        "@maven//:org_apache_commons_commons_crypto",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_fusesource_leveldbjni_leveldbjni_all",
        "@io_bazel_rules_scala_scala_library//:io_bazel_rules_scala_scala_library",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_google_guava_guava",
        #"@maven//:org_spark_project_spark_unused"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "@maven//:com_novocode_junit_interface",
        "@maven//:junit_junit",
        "@maven//:log4j_log4j",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_scalatest_scalatest_2_12",
        "@maven//:org_slf4j_slf4j_log4j12",
        "main_dependencies"
    ],
    runtime_deps = [
        "//common/network-common/src/test/resources:resources",
        "@maven//:log4j_log4j",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_log4j12",
        "@maven//:org_spark_project_spark_unused"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
