package(default_visibility = ["//visibility:public"])

java_library(
    name = "unsafe",
    srcs = glob(["src/main/**/*.java"]),
    deps = [
        "//common/tags",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_twitter_chill_2_12",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_esotericsoftware_kryo_shaded",
        #"@maven//:org_spark_project_spark_unused"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "@maven//:com_novocode_junit_interface",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_scalacheck_scalacheck_2_12",
        "@maven//:org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_slf4j_slf4j_api",
        #"@maven//:org_spark_project_spark_unused"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
