package(default_visibility = ["//visibility:public"])
load("@rules_antlr//antlr:antlr4.bzl", "antlr")

antlr(
    name = "parser",
    srcs = glob(["src/main/antlr4/**/*.g4"]),
    package = "org.apache.spark.sql.catalyst.parser",
    #language = "Java",
    no_visitor = False,
    visitor = True,
)

java_library(
    name = "parser_lib",
    srcs = [":parser"],
    deps = ["@antlr4_runtime//jar"],
)

scala_library(
    name = "catalyst",
    srcs = glob([
        "src/main/scala/**/*.scala",
        "src/main/scala-2.12/**/*.scala",
        "src/main/java/**/*.java",
        "src/main/java/**/*.scala", # sigh
    ]),
    deps = [
        ":parser_lib",
        "//common/sketch",
        "//common/tags",
        "//common/unsafe",
        "//common/network-common",
        "//core",
        "@antlr4_runtime//jar",
        "@maven//:org_json4s_json4s_jackson_2_12",
        "@maven//:org_json4s_json4s_core_2_12",
        "@maven//:org_json4s_json4s_scalap_2_12",
        "@maven//:org_json4s_json4s_ast_2_12",
        "@maven//:org_lz4_lz4_java",
        "@maven//:com_esotericsoftware_kryo_shaded",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_math3",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_apache_hadoop_hadoop_client",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_arrow_arrow_memory",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_module_jackson_module_scala_2_12",
        "@maven//:com_univocity_univocity_parsers",
        "@maven//:commons_codec_commons_codec",
        "@maven//:org_apache_arrow_arrow_vector",
        "@maven//:org_codehaus_janino_commons_compiler",
        "@maven//:org_codehaus_janino_janino",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_log4j12",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@io_bazel_rules_scala_scala_parser_combinators//:io_bazel_rules_scala_scala_parser_combinators",
        "@io_bazel_rules_scala_scala_reflect//:io_bazel_rules_scala_scala_reflect",
        #"@org_spark_project_spark_unused//:linkable"
    ],
    runtime_deps = [
        "//sql/catalyst/src/main/resources:resources"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "//core:main_dependencies",
        "@com_novocode_junit_interface",
        "@junit_junit",
        "@org_mockito_mockito_core",
        "@org_scalacheck_scalacheck_2_12",
        "@org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "//sql/catalyst/src/test/resources:resources",
        "@com_google_guava_guava//:linkable",
        "@com_google_protobuf_protobuf_java//:linkable",
        "@commons_codec_commons_codec//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro_mapred_hadoop2//:linkable",
        "@org_apache_commons_commons_math3//:linkable",
        "@org_apache_curator_curator_recipes//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_lz4_lz4_java//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_spark_project_spark_unused//:linkable",
        "@org_xerial_snappy_snappy_java//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
