package(default_visibility = ["//visibility:public"])

scala_library(
    name = "core",
    srcs = glob([
        "src/main/scala/**/*.scala",
        "src/main/scala-2.12/**/*.scala",
        "src/main/java/**/*.java",
        "v2.3/src/main/scala/**/*.scala",
        "v2.3/src/main/java/**/*.java",
    ]),
    deps = [
        "//common/sketch",
        "//common/tags",
        "//common/unsafe",
        "//common/kvstore",
        "//common/network-common",
        "//core",
        "//launcher",
        "//sql/catalyst",
        "//sql/catalyst:parser_lib",
        "@antlr4_runtime//jar",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:net_razorvine_pyrolite",
        "@maven//:commons_io_commons_io",
        "@maven//:org_apache_arrow_arrow_format",
        "@maven//:org_apache_arrow_arrow_memory",
        "@maven//:org_apache_arrow_arrow_vector",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_scalanlp_breeze_2_12",
        "@maven//:org_scalanlp_breeze_macros_2_12",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_flatbuffers_flatbuffers_java", # XXX
        "@maven//:com_esotericsoftware_kryo_shaded",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:org_json4s_json4s_jackson_2_12",
        "@maven//:org_json4s_json4s_core_2_12",
        "@maven//:org_json4s_json4s_scalap_2_12",
        "@maven//:org_json4s_json4s_ast_2_12",
        "@maven//:com_univocity_univocity_parsers",
        "@maven//:org_slf4j_slf4j_log4j12",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_jul_to_slf4j",
        "@maven//:org_apache_hive_hive_storage_api",
        "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
        "@maven//:org_apache_hadoop_hadoop_client",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_hadoop_hadoop_hdfs_client",
        "@maven//:org_apache_orc_orc_core",
        "@maven//:org_apache_orc_orc_mapreduce",
        "@maven//:org_apache_parquet_parquet_avro",
        "@maven//:org_apache_parquet_parquet_column",
        "@maven//:org_apache_parquet_parquet_common",
        "@maven//:org_apache_parquet_parquet_encoding",
        "@maven//:org_apache_parquet_parquet_hadoop",
        "@maven//:org_apache_xbean_xbean_asm7_shaded",
        "@maven//:org_eclipse_jetty_jetty_servlet",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:javax_servlet_javax_servlet_api",
        "@io_bazel_rules_scala_scala_xml//:io_bazel_rules_scala_scala_xml",
        "@io_bazel_rules_scala_scala_parser_combinators//:io_bazel_rules_scala_scala_parser_combinators",
        #"@org_spark_project_spark_unused//:linkable"
    ],
    runtime_deps = [
        "//sql/core/src/main/resources:resources"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "//core:main_dependencies",
        "//sql/catalyst:main_dependencies",
        "@com_h2database_h2",
        "@com_ibm_db2_jcc",
        "@com_microsoft_sqlserver_mssql_jdbc",
        "@com_novocode_junit_interface",
        "@com_oracle_database_jdbc_ojdbc8",
        "@junit_junit",
        "@org_mariadb_jdbc_mariadb_java_client",
        "@org_mockito_mockito_core",
        "@org_postgresql_postgresql",
        "@org_scalacheck_scalacheck_2_12",
        "@org_scalatest_scalatest_2_12",
        "@org_seleniumhq_selenium_htmlunit_driver",
        "@org_seleniumhq_selenium_selenium_java",
        "main_dependencies"
    ],
    runtime_deps = [
        "//sql/core/src/test/resources:resources",
        "@com_google_guava_guava//:linkable",
        "@com_google_protobuf_protobuf_java//:linkable",
        "@commons_codec_commons_codec//:linkable",
        "@commons_lang_commons_lang//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro_mapred_hadoop2//:linkable",
        "@org_apache_commons_commons_math3//:linkable",
        "@org_apache_curator_curator_recipes//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_eclipse_jetty_jetty_servlet//:linkable",
        "@org_lz4_lz4_java//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_spark_project_spark_unused//:linkable",
        "@org_xerial_snappy_snappy_java//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
