package(default_visibility = ["//visibility:public"])

scala_library(
    name = "hive",
    srcs = glob([
            "src/main/scala/**/*.scala",
            "src/main/java/**/*.java",
        ]),
    deps = [
        "//core",
        "//sql/core",
        "@com_google_code_findbugs_jsr305",
        "@com_twitter_parquet_hadoop_bundle",
        "@commons_codec_commons_codec",
        "@commons_httpclient_commons_httpclient",
        "@joda_time_joda_time",
        "@org_apache_avro_avro",
        "@org_apache_avro_avro_mapred_hadoop2",
        "@org_apache_derby_derby",
        "@org_apache_hive_hive_common",
        "@org_apache_hive_hive_exec_core",
        "@org_apache_hive_hive_llap_client",
        "@org_apache_hive_hive_llap_common",
        "@org_apache_hive_hive_metastore",
        "@org_apache_hive_hive_serde",
        "@org_apache_hive_hive_shims",
        "@org_apache_httpcomponents_httpclient",
        "@org_apache_thrift_libfb303",
        "@org_apache_thrift_libthrift",
        "@org_codehaus_jackson_jackson_mapper_asl",
        "@org_datanucleus_datanucleus_core",
        "@org_jodd_jodd_core",
        #"@org_spark_project_spark_unused//:linkable"
    ],
    runtime_deps = [
        "//sql/hive/src/main/resources:resources"
    ],
)
     


scala_library(
    name = "tests_dependencies",
    testonly = 1,
    deps = [
        "//common/tags:main_dependencies",
        "//core:main_dependencies",
        "//sql/catalyst:main_dependencies",
        "//sql/core:main_dependencies",
        "@com_novocode_junit_interface",
        "@junit_junit",
        "@org_scala_lang_scala_compiler",
        "@org_scalacheck_scalacheck_2_12",
        "@org_scalatest_scalatest_2_12",
        "main_dependencies"
    ],
    runtime_deps = [
        "//sql/hive/src/test/resources:resources",
        "@com_google_guava_guava//:linkable",
        "@com_google_protobuf_protobuf_java//:linkable",
        "@com_twitter_parquet_hadoop_bundle//:linkable",
        "@commons_codec_commons_codec//:linkable",
        "@commons_lang_commons_lang//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro_mapred_hadoop2//:linkable",
        "@org_apache_commons_commons_math3//:linkable",
        "@org_apache_curator_curator_recipes//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_lz4_lz4_java//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_spark_project_spark_unused//:linkable",
        "@org_xerial_snappy_snappy_java//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
